# Arduino

./: .env.hedera.example  .gitignore  .gitmodules  ANALYSIS_SUMMARY.md  CLAUDE.md  CODEBASE_ARCHITECTURE_ANALYSIS.md  GENERATION_SUMMARY.md  MAXIMUM_OUTPUT_MASTER_SUMMARY.md  NEUROROBOTIC_CONTROL.md  NEUROROBOTIC_INTEGRATION_GUIDE.md  NOTEBOOK_SUITE_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP.md  TEST_RESULTS.md  TEST_RUN_RESULTS.md  demo_neurorobotic_poc.py  demo_primalrwa_integration.py  demo_rpo_burn_poc.py  deploy_contract.py  dub.json  main.py  main.tex  neurorobotic_control.py  neurorobotic_hardware_bridge.py  pyproject.toml  requirements.txt  run_motorhand_validation.py  verify_burn_ratio.py
.github/: dependabot.yml
analysis/: actuator_control_inventory.md
billing/: hedera_integration.py  rpo_actuator_addresses.json  rpo_burn_meter.py  rpo_operator_config.json
contracts/: RPOBurnContract.sol
demos/: demo_cryo.py  demo_heart_arduino.py  demo_ligand_receptor.py  demo_motorhand_integration.py  demo_primal.py  demo_quantum_cardiac_kernel_v4.py  demo_refined_heart_arduino.py  demo_rrt_rif.py
docs/: PRIMALRWA_INTEGRATION.md  RPO_BURN_POC.md  SMART_CONTRACT_DEPLOYMENT.md  ligand_receptor_subsystem.md  motorhand_pro_integration.md  processor_heart_arduino_integration.md  quantitative_framework.md
experiments/: .gitignore  COMPREHENSIVE_SWEEP_RESULTS.md  README.md  framework.py  run_all_individual_sweeps.py  run_comprehensive_sweep.py  run_maximum_extended_sweep.py  run_primal_kernel_sweep.py
matplotlib/: __init__.py  pyplot.py
notebooks/: README.md  (+11 more)
(+60 files in other folders)
