[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "primal-logic-hand"
version = "1.0.0"
description = "Primal Logic robotic hand control framework (Python port)"
authors = [{name = "Donte Lightfoot", email = "donte@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["primal_logic"]
